--- a/alumni/index.html
+++ b/alumni/index.html
@@ -298,6 +298,66 @@
                 </div>
             </div>
 
+            <!-- 2024 Alumni Section -->
+            <div id="year-2024" class="year-content hidden">
+                <div class="text-center mb-8">
+                    <h3 class="text-2xl font-bold text-fiu-navy mb-2">Class of 2024</h3>
+                    <p class="text-gray-700">8 Alumni • 6 Universities • 5 Faculty Mentors</p>
+                </div>
+
+                <!-- Compact Alumni Grid -->
+                <div class="grid md:grid-cols-2 gap-6">
+                    <div class="bg-gray-50 p-4 rounded-lg">
+                        <h4 class="font-bold text-fiu-navy mb-1">Oleksandr Jockusch</h4>
+                        <p class="text-sm text-gray-600 mb-1">Southern Illinois University</p>
+                        <p class="text-sm text-gray-700 mb-2">Blockchain</p>
+                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Dr. Niki Pissinou</p>
+                    </div>
+                    <div class="bg-gray-50 p-4 rounded-lg">
+                        <h4 class="font-bold text-fiu-navy mb-1">Isabella Peng</h4>
+                        <p class="text-sm text-gray-600 mb-1">Vanderbilt University</p>
+                        <p class="text-sm text-gray-700 mb-2">Machine Learning</p>
+                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Dr. Niki Pissinou</p>
+                    </div>
+                    <div class="bg-gray-50 p-4 rounded-lg">
+                        <h4 class="font-bold text-fiu-navy mb-1">Thomas Rubio</h4>
+                        <p class="text-sm text-gray-600 mb-1">Carnegie Mellon University</p>
+                        <p class="text-sm text-gray-700 mb-2">Information Theory</p>
+                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Dr. Farhad Shirani</p>
+                    </div>
+                    <div class="bg-gray-50 p-4 rounded-lg">
+                        <h4 class="font-bold text-fiu-navy mb-1">Van Phan</h4>
+                        <p class="text-sm text-gray-600 mb-1">Florida International University</p>
+                        <p class="text-sm text-gray-700 mb-2">Research Project</p>
+                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Dr. Sun</p>
+                    </div>
+                    <div class="bg-gray-50 p-4 rounded-lg">
+                        <h4 class="font-bold text-fiu-navy mb-1">Jason Jiang</h4>
+                        <p class="text-sm text-gray-600 mb-1">Florida International University</p>
+                        <p class="text-sm text-gray-700 mb-2">Research Project</p>
+                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Dr. Wang</p>
+                    </div>
+                    <div class="bg-gray-50 p-4 rounded-lg">
+                        <h4 class="font-bold text-fiu-navy mb-1">Joshua Madolid</h4>
+                        <p class="text-sm text-gray-600 mb-1">UC Irvine</p>
+                        <p class="text-sm text-gray-700 mb-2">Fitbit Classification</p>
+                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Dr. Christian Pollabauer</p>
+                    </div>
+                    <div class="bg-gray-50 p-4 rounded-lg">
+                        <h4 class="font-bold text-fiu-navy mb-1">Jason Jabech</h4>
+                        <p class="text-sm text-gray-600 mb-1">Florida International University</p>
+                        <p class="text-sm text-gray-700 mb-2">Fitbit Classification</p>
+                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Dr. Christian Pollabauer</p>
+                    </div>
+                    <div class="bg-gray-50 p-4 rounded-lg">
+                        <h4 class="font-bold text-fiu-navy mb-1">Manuel Cue Montes de Oca</h4>
+                        <p class="text-sm text-gray-600 mb-1">UNLV</p>
+                        <p class="text-sm text-gray-700 mb-2">Adversarial Machine Learning</p>
+                        <p class="text-xs text-fiu-gold font-semibold">Mentor: Dr. Niki Pissinou</p>
+                    </div>
+                </div>
+            </div>
+
             <!-- 2022 Alumni Section -->
             <div id="year-2022" class="year-content hidden">
                 <div class="text-center mb-8">
