--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REU ASSET: Advanced Secured Sensor Enabling Technologies at FIU</title>
+    <title>RET ASSET: Advanced Secured Sensor Enabling Technologies at FIU</title>
     <link rel="icon" type="image/jpeg" href="/FIU-logo.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -34,8 +34,8 @@
                         </a>
                     </div>
                     <div class="ml-2 sm:ml-4">
-                        <h1 class="text-sm sm:text-lg md:text-xl font-bold hidden sm:block">REU ASSET: Advanced Secured Sensor Enabling Technologies</h1>
-                        <h1 class="text-xs font-bold block sm:hidden">REU ASSET: Advanced Secured Sensor Enabling Technologies</h1>
+                        <h1 class="text-sm sm:text-lg md:text-xl font-bold hidden sm:block">RET ASSET: Advanced Secured Sensor Enabling Technologies</h1>
+                        <h1 class="text-xs font-bold block sm:hidden">RET ASSET: Advanced Secured Sensor Enabling Technologies</h1>
                     </div>
                 </div>
                 <div class="hidden md:block">
@@ -116,10 +116,10 @@
             <div class="absolute inset-0 flex items-center justify-center text-center z-20 pointer-events-none">
                 <div class="max-w-4xl mx-auto px-4">
                     <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold text-white mb-6">
-                        REU ASSET: Advanced Secured Sensor Enabling Technologies
+                        RET ASSET: Advanced Secured Sensor Enabling Technologies
                     </h1>
                     <p class="text-xl md:text-2xl text-white mb-8">
-                        Summer Research Experience for Undergraduates at Florida International University
+                        Summer Research Experience for Teachers at Florida International University
                     </p>
                     <div class="space-y-4 sm:space-y-0 sm:space-x-4 sm:flex sm:justify-center pointer-events-auto">
                         <a href="https://etap.nsf.gov/award/184/opportunity/7890" class="inline-block bg-fiu-gold text-fiu-navy px-8 py-4 rounded-lg text-lg font-semibold hover:bg-fiu-light-gold transition-colors" target="_blank">
@@ -148,7 +148,7 @@
             <div class="text-center mb-12">
                 <h2 class="text-3xl md:text-4xl font-bold text-fiu-navy mb-4">Program Overview</h2>
                 <p class="text-xl text-gray-700 max-w-3xl mx-auto">
-                    Summer 2025 Research Experience for Undergraduates in Advanced Secured Sensor Enabling Technologies
+                    Summer 2026 Research Experience for Teachers in Advanced Secured Sensor Enabling Technologies
                 </p>
             </div>
             
@@ -166,7 +166,7 @@
                         <i class="fas fa-calendar-alt text-2xl"></i>
                     </div>
                     <h3 class="text-xl font-bold text-fiu-navy mb-2">Duration</h3>
-                    <p class="text-gray-700">10 weeks<br>June - August 2025</p>
+                    <p class="text-gray-700">6 weeks<br>June - August 2025</p>
                 </div>
                 
                 <div class="bg-white p-8 rounded-lg shadow-lg text-center">
@@ -174,7 +174,7 @@
                         <i class="fas fa-dollar-sign text-2xl"></i>
                     </div>
                     <h3 class="text-xl font-bold text-fiu-navy mb-2">Stipend</h3>
-                                            <p class="text-gray-700">$7,000 stipend<br>+ Housing + Travel</p>
+                                            <p class="text-gray-700">$6,300 stipend<br>+ Housing + Travel</p>
                 </div>
             </div>
         </div>
@@ -185,14 +185,13 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid lg:grid-cols-2 gap-12 items-center">
                 <div>
-                    <h2 class="text-3xl md:text-4xl font-bold text-fiu-navy mb-6">About Our REU Program</h2>
+                    <h2 class="text-3xl md:text-4xl font-bold text-fiu-navy mb-6">About Our RET Program</h2>
                     <p class="text-lg text-gray-700 mb-6">
-                        The Research Experience for Undergraduates (REU) site at Florida International University (FIU) 
-                        provides research experience to undergraduate students during a 10 week summer program. Surf the 
-                        wave with ASSET Research! The research projects during the summer program will be centered around 
-                        the theme of Advanced Secured Sensor Enabling Technologies (ASSET). Students will improve the understanding 
-                        of the nature of research practice and scientific reasoning and learn the process of conducting research and 
-                        hands-on knowledge of applied and basic research.
+                        This Research Experiences for Teachers (RET) Site on cyber-enabled technologies 
+                        provides opportunities for science, math, and technology teachers to work with 
+                        faculty at Florida International University's School of Computing and Information 
+                        Sciences. The program is an intensive, six (6) week program where teachers 
+                        participate in technical and educational research as part of a research community.
                     </p>
                     <ul class="text-lg text-gray-700 space-y-2">
                         <li class="flex items-center"><i class="fas fa-check text-fiu-gold mr-3"></i>Hands-on research experience</li>
@@ -276,7 +275,7 @@
             <div class="text-center mb-8">
                 <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4">Proudly Sponsored By</h2>
                 <p class="text-gray-600 max-w-2xl mx-auto">
-                    This Research Experience for Undergraduates (REU) program is made possible through the generous support of the National Science Foundation and the U.S. Department of Defense.
+                    This Research Experience for Teachers (RET) program is made possible through the generous support of the National Science Foundation and the U.S. Department of Defense.
                 </p>
             </div>
             <div class="flex flex-col md:flex-row items-center justify-center space-y-8 md:space-y-0 md:space-x-16">
@@ -308,7 +307,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid sm:grid-cols-2 lg:grid-cols-5 gap-6">
                 <div class="sm:col-span-2 lg:col-span-1">
-                    <h3 class="text-lg font-bold mb-4">REU ASSET: Advanced Secured Sensor Enabling Technologies</h3>
+                    <h3 class="text-lg font-bold mb-4">RET ASSET: Advanced Secured Sensor Enabling Technologies</h3>
                     <p class="text-gray-300">Florida International University<br>Miami, FL 33199</p>
                 </div>
                 <div class="flex justify-center">
@@ -329,7 +328,7 @@
                         <h3 class="text-lg font-bold mb-4 text-center">Resources</h3>
                         <ul class="space-y-2 text-gray-300 text-center">
                             <li><a href="/faq/" class="hover:text-fiu-gold transition-colors">FAQs</a></li>
-                            <li><a href="https://etap.nsf.gov/" class="hover:text-fiu-gold transition-colors" target="_blank">NSF REU Program</a></li>
+                            <li><a href="https://etap.nsf.gov/" class="hover:text-fiu-gold transition-colors" target="_blank">NSF RET Program</a></li>
                             <li><a href="https://cec.fiu.edu/" class="hover:text-fiu-gold transition-colors" target="_blank">FIU Engineering</a></li>
                         </ul>
                     </div>
@@ -366,6 +365,7 @@
             </div>
             <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-300">
                 <p>&copy; 2025 Florida International University. All rights reserved. | This material is based upon work supported by the National Science Foundation and the U.S. Department of Defense.</p>
+                <p class="text-xs text-gray-400 mt-2">Powered by <a href="https://dynamicio.vercel.app/" target="_blank" class="hover:text-fiu-gold transition-colors">Dynamic.IO</a></p>
             </div>
         </div>
     </footer>
