--- a/research/index.html
+++ b/research/index.html
@@ -644,6 +644,7 @@
             </div>
             <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-300">
                 <p>&copy; 2025 Florida International University. All rights reserved. | This material is based upon work supported by the National Science Foundation and the U.S. Department of Defense.</p>
+                <p class="text-xs text-gray-400 mt-2">Powered by <a href="https://dynamicio.vercel.app/" target="_blank" class="hover:text-fiu-gold transition-colors">Dynamic.IO</a></p>
             </div>
         </div>
     </footer>
