--- a/alumni/index.html
+++ b/alumni/index.html
@@ -34,8 +34,8 @@
                         </a>
                     </div>
                     <div class="ml-2 sm:ml-4">
-                        <h1 class="text-sm sm:text-lg md:text-xl font-bold hidden sm:block">REU ASSET: Advanced Secured Sensor Enabling Technologies</h1>
-                        <h1 class="text-xs font-bold block sm:hidden">REU ASSET: Advanced Secured Sensor Enabling Technologies</h1>
+                        <h1 class="text-sm sm:text-lg md:text-xl font-bold hidden sm:block">RET ASSET: Advanced Secured Sensor Enabling Technologies</h1>
+                        <h1 class="text-xs font-bold block sm:hidden">RET ASSET: Advanced Secured Sensor Enabling Technologies</h1>
                     </div>
                 </div>
                 <div class="hidden md:block">
@@ -78,7 +78,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <h1 class="text-4xl md:text-5xl font-bold mb-4">REU Alumni</h1>
             <p class="text-xl text-gray-300 max-w-3xl mx-auto">
-                Celebrating over 16 years of REU ASSET program alumni (2009-2025) and their continued success in STEM fields
+                Celebrating over 16 years of RET ASSET program alumni (2015-2025) and their continued success in STEM fields
             </p>
         </div>
     </section>
@@ -95,7 +95,7 @@
                 <div class="bg-fiu-navy text-white p-6 rounded-lg text-center">
                     <div class="text-4xl font-bold mb-2">160+</div>
                     <div class="text-fiu-gold font-semibold">Total Alumni</div>
-                    <div class="text-sm text-gray-300 mt-1">2009-2025</div>
+                    <div class="text-sm text-gray-300 mt-1">2015-2025</div>
                 </div>
                 <div class="bg-fiu-navy text-white p-6 rounded-lg text-center">
                     <div class="text-4xl font-bold mb-2">80+</div>
@@ -1772,7 +1772,7 @@
          <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
              <div class="grid sm:grid-cols-2 lg:grid-cols-5 gap-6">
                  <div class="sm:col-span-2 lg:col-span-1">
-                     <h3 class="text-lg font-bold mb-4">REU ASSET: Advanced Secured Sensor Enabling Technologies</h3>
+                     <h3 class="text-lg font-bold mb-4">RET ASSET: Advanced Secured Sensor Enabling Technologies</h3>
                      <p class="text-gray-300">Florida International University<br>Miami, FL 33199</p>
                  </div>
                  <div class="flex justify-center">
