--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - REU ASSET: Advanced Secured Sensor Enabling Technologies at FIU</title>
+    <title>Contact - RET ASSET: Advanced Secured Sensor Enabling Technologies at FIU</title>
     <link rel="icon" type="image/jpeg" href="/FIU-logo.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -34,8 +34,8 @@
                         </a>
                     </div>
                     <div class="ml-2 sm:ml-4">
-                        <h1 class="text-sm sm:text-lg md:text-xl font-bold hidden sm:block">REU ASSET: Advanced Secured Sensor Enabling Technologies</h1>
-                        <h1 class="text-xs font-bold block sm:hidden">REU ASSET: Advanced Secured Sensor Enabling Technologies</h1>
+                        <h1 class="text-sm sm:text-lg md:text-xl font-bold hidden sm:block">RET ASSET: Advanced Secured Sensor Enabling Technologies</h1>
+                        <h1 class="text-xs font-bold block sm:hidden">RET ASSET: Advanced Secured Sensor Enabling Technologies</h1>
                     </div>
                 </div>
                 <div class="hidden md:block">
@@ -79,7 +79,7 @@
             <div class="text-center">
                 <h1 class="text-4xl md:text-5xl font-bold mb-4">Contact Us</h1>
                 <p class="text-xl max-w-3xl mx-auto">
-                    Get in touch with our program coordinators for questions about the REU ASSET program
+                    Get in touch with our program coordinators for questions about the RET ASSET program
                 </p>
             </div>
         </div>
@@ -179,7 +179,7 @@
                             <label class="flex items-center">
                                 <input type="checkbox" id="newsletter" name="newsletter" 
                                        class="mr-3 h-4 w-4 text-fiu-gold focus:ring-fiu-gold border-gray-300 rounded">
-                                <span class="text-sm text-gray-700">I would like to receive updates about the REU program</span>
+                                <span class="text-sm text-gray-700">I would like to receive updates about the RET program</span>
                             </label>
                         </div>
 
@@ -232,7 +232,7 @@
                             <i class="fas fa-envelope text-fiu-gold text-xl mr-4"></i>
                             <div>
                                 <p class="font-semibold text-fiu-navy">General Inquiries</p>
-                                <p class="text-gray-700">nsfdodreu@gmail.com</p>
+                                <p class="text-gray-700">nsfdodret@gmail.com</p>
                             </div>
                         </div>
                     </div>
@@ -300,8 +300,8 @@
                     </div>
                     <h3 class="text-xl font-bold text-fiu-navy mb-4">Application Questions</h3>
                     <p class="text-gray-700 mb-4">Questions about eligibility, requirements, or the application process</p>
-                    <a href="mailto:reu.applications@fiu.edu" class="text-fiu-gold hover:text-fiu-navy font-semibold">
-                        nsfdodreu@gmail.com
+                    <a href="mailto:ret.applications@fiu.edu" class="text-fiu-gold hover:text-fiu-navy font-semibold">
+                        nsfdodret@gmail.com
                     </a>
                 </div>
                 
@@ -311,8 +311,8 @@
                     </div>
                     <h3 class="text-xl font-bold text-fiu-navy mb-4">Research Inquiries</h3>
                     <p class="text-gray-700 mb-4">Questions about specific research projects or faculty mentors</p>
-                    <a href="mailto:reu.research@fiu.edu" class="text-fiu-gold hover:text-fiu-navy font-semibold">
-                        nsfdodreu@gmail.com
+                    <a href="mailto:ret.research@fiu.edu" class="text-fiu-gold hover:text-fiu-navy font-semibold">
+                        nsfdodret@gmail.com
                     </a>
                 </div>
                 
@@ -322,7 +322,7 @@
                     </div>
                     <h3 class="text-xl font-bold text-fiu-navy mb-4">Housing & Logistics</h3>
                     <p class="text-gray-700 mb-4">Questions about housing, travel, meals, and campus life</p>
-                    <a href="mailto:reu.housing@fiu.edu" class="text-fiu-gold hover:text-fiu-navy font-semibold">
+                    <a href="mailto:ret.housing@fiu.edu" class="text-fiu-gold hover:text-fiu-navy font-semibold">
                         housing@fiu.edu
                     </a>
                 </div>
@@ -335,7 +335,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid sm:grid-cols-2 lg:grid-cols-5 gap-6">
                 <div class="sm:col-span-2 lg:col-span-1">
-                    <h3 class="text-lg font-bold mb-4">REU ASSET: Advanced Secured Sensor Enabling Technologies</h3>
+                    <h3 class="text-lg font-bold mb-4">RETASSET: Advanced Secured Sensor Enabling Technologies</h3>
                     <p class="text-gray-300">Florida International University<br>Miami, FL 33199</p>
                 </div>
                 <div class="flex justify-center">
@@ -354,7 +354,7 @@
                         <h3 class="text-lg font-bold mb-4 text-center">Resources</h3>
                         <ul class="space-y-2 text-gray-300 text-center">
                             <li><a href="/faq/" class="hover:text-fiu-gold transition-colors">FAQs</a></li>
-                            <li><a href="https://etap.nsf.gov/" class="hover:text-fiu-gold transition-colors" target="_blank">NSF REU Program</a></li>
+                            <li><a href="https://etap.nsf.gov/" class="hover:text-fiu-gold transition-colors" target="_blank">NSF RET Program</a></li>
                             <li><a href="https://cec.fiu.edu/" class="hover:text-fiu-gold transition-colors" target="_blank">FIU Engineering</a></li>
                         </ul>
                     </div>
