--- a/faculty/index.html
+++ b/faculty/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Faculty Mentors - REU ASSET: Advanced Secured Sensor Enabling Technologies at FIU</title>
+    <title>Faculty Mentors - RET ASSET: Advanced Secured Sensor Enabling Technologies at FIU</title>
     <link rel="icon" type="image/jpeg" href="/FIU-logo.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -34,8 +34,8 @@
                         </a>
                     </div>
                     <div class="ml-2 sm:ml-4">
-                        <h1 class="text-sm sm:text-lg md:text-xl font-bold hidden sm:block">REU ASSET: Advanced Secured Sensor Enabling Technologies</h1>
-                        <h1 class="text-xs font-bold block sm:hidden">REU ASSET: Advanced Secured Sensor Enabling Technologies</h1>
+                        <h1 class="text-sm sm:text-lg md:text-xl font-bold hidden sm:block">RET ASSET: Advanced Secured Sensor Enabling Technologies</h1>
+                        <h1 class="text-xs font-bold block sm:hidden">RET ASSET: Advanced Secured Sensor Enabling Technologies</h1>
                     </div>
                 </div>
                 <div class="hidden md:block">
@@ -322,7 +322,7 @@
             <div class="text-center mb-12">
                 <h2 class="text-3xl md:text-4xl font-bold text-fiu-navy mb-4">Graduate Student Mentors</h2>
                 <p class="text-xl text-gray-700 max-w-3xl mx-auto">
-                    Dedicated graduate students who provide additional mentorship and support for REU participants
+                    Dedicated graduate students who provide additional mentorship and support for RET participants
                 </p>
             </div>
             
@@ -433,7 +433,7 @@
             <div class="text-center mb-12">
                 <h2 class="text-3xl md:text-4xl font-bold text-fiu-navy mb-4">Previous Faculty</h2>
                 <p class="text-xl text-gray-700 max-w-3xl mx-auto">
-                    Former faculty members who have contributed to our REU program
+                    Former faculty members who have contributed to our RET program
                 </p>
             </div>
             
@@ -603,7 +603,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid sm:grid-cols-2 lg:grid-cols-5 gap-6">
                 <div class="sm:col-span-2 lg:col-span-1">
-                    <h3 class="text-lg font-bold mb-4">REU ASSET: Advanced Secured Sensor Enabling Technologies</h3>
+                    <h3 class="text-lg font-bold mb-4">RET ASSET: Advanced Secured Sensor Enabling Technologies</h3>
                     <p class="text-gray-300">Florida International University<br>Miami, FL 33199</p>
                 </div>
                 <div class="flex justify-center">
@@ -622,7 +622,7 @@
                         <h3 class="text-lg font-bold mb-4 text-center">Resources</h3>
                         <ul class="space-y-2 text-gray-300 text-center">
                             <li><a href="/faq/" class="hover:text-fiu-gold transition-colors">FAQs</a></li>
-                            <li><a href="https://etap.nsf.gov/" class="hover:text-fiu-gold transition-colors" target="_blank">NSF REU Program</a></li>
+                            <li><a href="https://etap.nsf.gov/" class="hover:text-fiu-gold transition-colors" target="_blank">NSF RET Program</a></li>
                             <li><a href="https://cec.fiu.edu/" class="hover:text-fiu-gold transition-colors" target="_blank">FIU Engineering</a></li>
                         </ul>
                     </div>
