--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQs - REU Site: Quantum & Secure Networking at FIU</title>
+    <title>FAQs - RET Site: Quantum & Secure Networking at FIU</title>
     <link rel="icon" type="image/jpeg" href="/FIU-logo.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -34,8 +34,8 @@
                         </a>
                     </div>
                     <div class="ml-2 sm:ml-4">
-                        <h1 class="text-sm sm:text-lg md:text-xl font-bold hidden sm:block">REU ASSET: Advanced Secured Sensor Enabling Technologies</h1>
-                        <h1 class="text-xs font-bold block sm:hidden">REU ASSET: Advanced Secured Sensor Enabling Technologies</h1>
+                        <h1 class="text-sm sm:text-lg md:text-xl font-bold hidden sm:block">RET ASSET: Advanced Secured Sensor Enabling Technologies</h1>
+                        <h1 class="text-xs font-bold block sm:hidden">RET ASSET: Advanced Secured Sensor Enabling Technologies</h1>
                     </div>
                 </div>
                 <div class="hidden md:block">
@@ -79,7 +79,7 @@
             <div class="text-center">
                 <h1 class="text-4xl md:text-5xl font-bold mb-4">Frequently Asked Questions</h1>
                 <p class="text-xl max-w-3xl mx-auto">
-                    Find answers to common questions about our REU program
+                    Find answers to common questions about our RET program
                 </p>
             </div>
         </div>
@@ -316,7 +316,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid sm:grid-cols-2 lg:grid-cols-5 gap-6">
                 <div class="sm:col-span-2 lg:col-span-1">
-                    <h3 class="text-lg font-bold mb-4">REU ASSET: Advanced Secured Sensor Enabling Technologies</h3>
+                    <h3 class="text-lg font-bold mb-4">RET ASSET: Advanced Secured Sensor Enabling Technologies</h3>
                     <p class="text-gray-300">Florida International University<br>Miami, FL 33199</p>
                 </div>
                 <div class="flex justify-center">
@@ -335,7 +335,7 @@
                         <h3 class="text-lg font-bold mb-4 text-center">Resources</h3>
                         <ul class="space-y-2 text-gray-300 text-center">
                             <li><a href="/faq/" class="hover:text-fiu-gold transition-colors">FAQs</a></li>
-                            <li><a href="https://etap.nsf.gov/" class="hover:text-fiu-gold transition-colors" target="_blank">NSF REU Program</a></li>
+                            <li><a href="https://etap.nsf.gov/" class="hover:text-fiu-gold transition-colors" target="_blank">NSF RET Program</a></li>
                             <li><a href="https://cec.fiu.edu/" class="hover:text-fiu-gold transition-colors" target="_blank">FIU Engineering</a></li>
                         </ul>
                     </div>
