--- a/research/index.html
+++ b/research/index.html
@@ -91,7 +91,7 @@
             <div class="text-center mb-12">
                 <h2 class="text-3xl md:text-4xl font-bold text-fiu-navy mb-4">Research Focus Areas</h2>
                 <p class="text-xl text-gray-700 max-w-4xl mx-auto">
-                    <strong>Because research is dynamic and continually evolving, project topics may change; students
+                    <strong>Because research is dynamic and continually evolving, project topics may change; teachers
                     are encouraged to visit participating faculty websites to learn about their most current research directions.</strong>
                 </p>
             </div>
