--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <i class="fas fa-dollar-sign text-2xl"></i>
                     </div>
                     <h3 class="text-xl font-bold text-fiu-navy mb-2">Stipend</h3>
-                                            <p class="text-gray-700">$6,300 stipend<br>+ Housing + Travel</p>
+                                            <p class="text-gray-700">$6,300 stipend<br></p>
                 </div>
             </div>
         </div>
