--- a/contact/index.html
+++ b/contact/index.html
@@ -163,7 +163,7 @@
                                 <option value="eligibility">Eligibility Requirements</option>
                                 <option value="research">Research Projects</option>
                                 <option value="program">Program Details</option>
-                                <option value="logistics">Housing & Logistics</option>
+                                <option value="logistics">Logistics</option>
                                 <option value="other">Other</option>
                             </select>
                         </div>
@@ -320,10 +320,10 @@
                     <div class="bg-fiu-navy text-white w-16 h-16 rounded-full flex items-center justify-center mx-auto mb-6">
                         <i class="fas fa-home text-2xl"></i>
                     </div>
-                    <h3 class="text-xl font-bold text-fiu-navy mb-4">Housing & Logistics</h3>
-                    <p class="text-gray-700 mb-4">Questions about housing, travel, meals, and campus life</p>
+                    <h3 class="text-xl font-bold text-fiu-navy mb-4">Logistics</h3>
+                    <p class="text-gray-700 mb-4">Questions about logistics of the program</p>
                     <a href="mailto:ret.housing@fiu.edu" class="text-fiu-gold hover:text-fiu-navy font-semibold">
-                        housing@fiu.edu
+                        nsfdodret@gmail.com
                     </a>
                 </div>
             </div>
